# sdk

./: .gitignore  README.md
alone/cxx/crashdump/example/: CMakeLists.txt  example_crashdump.cpp
alone/cxx/logger/example/: CMakeLists.txt  example_logger.cpp
alone/cxx/module/example/: CMakeLists.txt  example_module.cpp  module_a.cpp  module_a.h  module_b.h  module_c.h
alone/cxx/stacktrace/example/: CMakeLists.txt  example_stacktrace.cpp
base/cxx/algorithm/example/: CMakeLists.txt  example_algorithm.cpp  test_base64.hpp  test_md5.hpp  test_rc4.hpp  test_sha1.hpp  test_sm3.hpp  test_sm4.hpp  test_snowflake.hpp  test_uuid.hpp  test_xxhash.hpp
base/cxx/crashdump/: CMakeLists.txt  README.md
base/cxx/crashdump/cmake/: tools.cmake
base/cxx/crashdump/crashdump/: crashdump.cpp  crashdump.h
base/cxx/crashdump/example/: CMakeLists.txt  example_crashdump.cpp
base/cxx/curlex/: CMakeLists.txt  README.md
base/cxx/curlex/cmake/: git.cmake
base/cxx/curlex/curlex/: curl_object.cpp  curl_object.h  curl_req_data.cpp  curl_req_data.h  curl_request.cpp  curl_request.h  curlex.cpp  curlex.h
base/cxx/curlex/example/: CMakeLists.txt  example_curlex.cpp
base/cxx/database/: CMakeLists.txt  README.md
base/cxx/database/database/: sqlite.cpp  sqlite.h
base/cxx/database/example/: CMakeLists.txt  example_database.cpp
base/cxx/database/sqlcipher-4.4.3/: README.md
base/cxx/database/winq/: README.md  abstract.h  clause_join.cpp  clause_join.hpp  column.cpp  column.hpp  column_def.cpp  column_def.hpp  column_index.cpp  column_index.hpp  column_result.cpp  column_result.hpp  column_type.cpp  conflict.cpp  constraint_table.cpp  constraint_table.hpp  declare.hpp  describable.cpp  expr.cpp  foreign_key.cpp  literal_value.cpp  literal_value.hpp  module_argument.cpp  order.cpp  order.hpp  order_term.cpp  pragma.cpp  pragma.hpp  statement.cpp  statement.hpp  statement_alter_table.cpp  statement_attach.cpp  statement_create_index.cpp  statement_create_table.cpp  statement_create_virtual_table.cpp  statement_delete.cpp  statement_detach.cpp  statement_drop_index.cpp  statement_drop_table.cpp  statement_explain.cpp  (+13 more)
base/cxx/fileparse/example/: CMakeLists.txt  cfgkey.hpp  config.cpp  config.h  config.ini  config_key.h  config_key.hpp  example_fileparse.cpp  num.ini  persion.ini  test_ini.hpp  test_json.hpp  test_xlnt.hpp
base/cxx/inifile/example/: CMakeLists.txt  config.h  config.ini  config_key.h  example_ini.cpp
base/cxx/ipc/example/: CMakeLists.txt  example_simdb_recv.cpp  example_simdb_send.cpp
base/cxx/json/example/: CMakeLists.txt  example_json.cpp
base/cxx/logger/: CMakeLists.txt  README.md
base/cxx/logger/example/: CMakeLists.txt  example_logger.cpp
base/cxx/logger/logger/: inner_logger.cpp  inner_logger.h  logger.cpp  logger.h  logger_define.h  logger_manager.cpp  logger_manager.h
base/cxx/logger/logger/impl/: inner_logger_impl.cpp  inner_logger_impl.h
base/cxx/logger/logger/logfile/: daily_logfile.cpp  daily_logfile.h  logfile.cpp  logfile.h  rotating_logfile.cpp  rotating_logfile.h
base/cxx/module/example/: CMakeLists.txt  module_a.h  module_b.h
base/cxx/npacket/example/: CMakeLists.txt  example_npacket.cpp  netstat_tool.cpp  npacket_tool.cpp  pcap_device.cpp  pcap_device.h
base/cxx/nsocket/: CMakeLists.txt  README.md
base/cxx/nsocket/example/: CMakeLists.txt  net_msg_type.hpp  net_packet.hpp
base/cxx/nsocket/example/asset/: ca.crt  ca.csr  ca.srl  client.csr  client.key  server.csr  server.pub
base/cxx/nsocket/example/client/: client.key  example_socket_ftpclient.cpp  example_socket_tcpclient.cpp  example_socket_websocketclient.cpp
base/cxx/nsocket/example/server/: example_socket_ftpserver.cpp  example_socket_httpserver.cpp  example_socket_tcpserver.cpp  example_socket_websocketserver.cpp
base/cxx/nsocket/nsocket/: http_status_code.cpp  http_status_code.h  multimap.hpp  payload.cpp  payload.h  timeout_timer.cpp  timeout_timer.h
base/cxx/nsocket/nsocket/core/: socket_tcp.cpp  socket_tcp.h  socket_udp.cpp  socket_udp.h
base/cxx/nsocket/nsocket/ftp/: client.cpp  client.h  permissions.h  server.cpp  server.h  (+4 more)
base/cxx/threading/: CMakeLists.txt  README.md
base/cxx/threading/example/: CMakeLists.txt  example_asio_executor.cpp  example_simdb_recv.cpp  example_simdb_send.cpp
base/cxx/threading/threading/: async_proxy.cpp  async_proxy.h  platform.cpp  platform.h  safe_queue.h  simdb.hpp  thread_proxy.hpp  timer_proxy.cpp  timer_proxy.h  wait_group.h
base/cxx/utility/: CMakeLists.txt  README.md
base/cxx/utility/cmake/: tools.cmake
base/cxx/utility/example/: CMakeLists.txt  example_filecopy.cpp  example_fileinfo.cpp  example_utility.cpp  module_a.h  module_b.h  module_c.h  test_bytearray.hpp  test_charset.hpp  test_datetime.hpp  test_filecopy.hpp  test_filesystem.hpp  test_mmfile.hpp  test_module.hpp  test_net.hpp  test_process.hpp  test_system.hpp  test_timewatch.hpp  test_util.hpp
base/cxx/utility/utility/: util.cpp  util.h
program/proc_httpclient/: CMakeLists.txt  main.cpp
program/proc_netdump/: CMakeLists.txt  filter.cpp  filter.h  ftp_handler.cpp  ftp_handler.h  iec103_handler.cpp  iec103_handler.h  main.cpp  print.cpp  print.h
program/proc_ping/: CMakeLists.txt  main.cpp
program/proc_textfile2codestring/: CMakeLists.txt  main.cpp
program/proc_udpnode/: CMakeLists.txt  main.cpp
third/c++/libserial/: CMakeLists.txt  Makefile
third/c++/libserial/libserial/: unix.h  win.h
third/c++/libserial/visual_studio/: visual_studio.sln
utils/c++/threading/: CMakeLists.txt  thread_proxy.hpp
utils/c++/threading/diagnose/: diagnose.cpp  diagnose.h  diagnose_impl.cpp  diagnose_impl.h  diagnose_info.h
utils/c++/threading/entry/: asio_executor.cpp  asio_executor.h  thread_entry.cpp  thread_entry.h
utils/c++/threading/fiber/: fiber_executor.cpp  fiber_executor.h  fiber_lock_guard.h  fiber_mutex.cpp  fiber_mutex.h  fiber_recursive_mutex.cpp  fiber_recursive_mutex.h
utils/c++/threading/task/: executor.cpp  executor.h  simple_task.cpp  simple_task.h  task.cpp  task.h
widgets/: CMakeLists.txt  README.md
widgets/cmake/: git.cmake
(+1602 files in other folders)
